// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Personal Tools component > renders an Toolbar Personal Tools component 1`] = `
<div
  className="profile pastanaga-menu has-inner-actions"
  style={
    {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header pulled"
  >
    <button
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path fill-rule="evenodd" d="M31 17 8.414 17 18.707 6.707 17.293 5.293 4.586 18 17.293 30.707 18.707 29.293 8.414 19 31 19z"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      profile
    </h2>
  </header>
</div>
`;

exports[`Toolbar Personal Tools component renders an Toolbar Personal Tools component 1`] = `
<div
  className="profile pastanaga-menu has-inner-actions"
  style={
    Object {
      "flex": "0 0 320px",
    }
  }
>
  <header
    className="header pulled"
  >
    <button
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        onClick={null}
        style={
          Object {
            "fill": "currentColor",
            "height": "30px",
            "width": "auto",
          }
        }
        viewBox=""
        xmlns=""
      />
    </button>
    <div
      className="vertical divider"
    />
    <h2>
      profile
    </h2>
  </header>
</div>
`;
